codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__replayed_in_progress_turn.snap
---
source: tui/src/chatwidget/tests/history_replay.rs
assertion_line: 1672
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
• Working (0s • esc esc to interrupt)


› Ask Codex to do anything

  GPT-5.6-Sol default · /tmp/project
