codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_submission_warning_snapshot.snap
---
source: tui/src/chatwidget/tests/review_mode.rs
expression: lines_to_single_string(last)
---
⚠ Steer messages aren't supported during /review. Send your message after the
  review finishes, or press Ctrl+C now to cancel the review.
