codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_combined_used_tokens_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 1125
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  3.9K session used                                                             "
